change some responses add avatar
